Fix disabling the Polymer checkbox in the Win32 startup window when POLYMER=0.
git-svn-id: http://svn.eduke32.com/eduke32@6025 1a8010ca-5511-0410-912e-c29ae57300e0

--- a/polymer/eduke32/source/misc/gameres.rc
+++ b/polymer/eduke32/source/misc/gameres.rc
@@ -25,7 +25,7 @@ BEGIN
 	CONTROL "&Video mode:",   -1, "STATIC", SS_LEFT | WS_CHILD | WS_VISIBLE, 5, 6, 50, 8
 	CONTROL "",               IDCVMODE, "COMBOBOX", CBS_DROPDOWNLIST | WS_CHILD | WS_VISIBLE | WS_VSCROLL | WS_TABSTOP, 60, 4, 86, 56
 	CONTROL "&Fullscreen",    IDCFULLSCREEN, "BUTTON", BS_CHECKBOX | WS_CHILD | WS_VISIBLE | WS_TABSTOP, 154, 6, 46, 10
-#ifdef POLYMER
+#if defined POLYMER && POLYMER != 0
 	CONTROL "&Polymer",       IDCPOLYMER, "BUTTON", BS_CHECKBOX | WS_CHILD | WS_VISIBLE | WS_TABSTOP, 203, 6, 40, 10
 #endif
 	CONTROL "Input devices:", -1, "STATIC", SS_LEFT | WS_CHILD | WS_VISIBLE, 5, 20, 50, 8
