weapons.con.sample: Fix operation on wrong variable in tripbomb code.
git-svn-id: http://svn.eduke32.com/eduke32@6030 1a8010ca-5511-0410-912e-c29ae57300e0

--- a/polymer/eduke32/package/sdk/samples/weapons.con.sample
+++ b/polymer/eduke32/package/sdk/samples/weapons.con.sample
@@ -392,7 +392,7 @@ state draw_tripbomb // TRIPBOMB_WEAPON:
     else ifvarl weaponcount 4
     {
         setvarvar hud_temp currentweapon
-        shiftvarl currentweapon 2
+        shiftvarl hud_temp 2
         guniqhudid hud_temp
 
         addvar hud_x 142
