Makefile: Delete the default suffixes, to possible help avoid internal Make race conditions.
git-svn-id: http://svn.eduke32.com/eduke32@6052 1a8010ca-5511-0410-912e-c29ae57300e0

--- a/polymer/eduke32/Makefile
+++ b/polymer/eduke32/Makefile
@@ -675,6 +675,7 @@ ifeq ($(PRETTY_OUTPUT),1)
 .SILENT:
 endif
 .PHONY: all duke3d test sw veryclean clean cleanduke3d cleantest cleansw cleanutils utils dxutils sdlutils printutils printsdlutils printdxutils rev $(DUKE3D_OBJ)/rev.$o
+.SUFFIXES:
 
 # TARGETS
 
