Bring the previous commit into effect.
git-svn-id: http://svn.eduke32.com/eduke32@6056 1a8010ca-5511-0410-912e-c29ae57300e0

--- a/.gitignore
+++ b/.gitignore
@@ -1,39 +1,55 @@
-/polymer/eduke32/eduke32
-/polymer/eduke32/mapster32
-/polymer/eduke32/voidsw
-/polymer/eduke32/voidsw-editor
-/polymer/eduke32/kenbuild
-/polymer/eduke32/kenbuild-editor
-/polymer/eduke32/apps
-/polymer/eduke32/*.exe
-/polymer/eduke32/*.dll
-/polymer/eduke32/*.dylib
-/polymer/eduke32/*.so
-/polymer/eduke32/*.con
-/polymer/eduke32/*.sym
-/polymer/eduke32/*.memmap
-/polymer/eduke32/*.manifest
-/polymer/eduke32/*.log
-/polymer/eduke32/*.map
-/polymer/eduke32/*.pdb
-/polymer/eduke32/*.sdf
-/polymer/eduke32/*.suo
-/polymer/eduke32/*.opensdf
-/polymer/eduke32/.vs
-/polymer/eduke32/*.vcxproj.user
-/polymer/eduke32/*.psess
-/polymer/eduke32/*.vsp
-/polymer/eduke32/*.elf
-/polymer/eduke32/*.dol
-/polymer/eduke32/*.x86
-/polymer/eduke32/*.x64
-/polymer/eduke32/*.ppc
-/polymer/eduke32/*.app
-/polymer/eduke32/rsrc/game_banner.c
-/polymer/eduke32/rsrc/editor_banner.c
-/polymer/eduke32/obj
-xcuserdata
-project.xcworkspace
+
+./obj/
+
+./eduke32
+./mapster32
+./voidsw
+./voidsw-editor
+./kenbuild
+./kenbuild-editor
+./apps/
+./*.exe
+./*.dll
+./*.dylib
+./*.so
+./*.elf
+./*.dol
+./*.x86
+./*.x64
+./*.ppc
+./*.app
+
+./*.log
+./*.cache
+./*.cfg
+./textures
+
+./platform/Windows/*.exe
+./platform/Windows/*.log
+./platform/Windows/*.cache
+./platform/Windows/*.cfg
+./platform/Windows/textures
+
+./platform/Windows/*.cache
+./platform/Windows/*.cfg
+./platform/Windows/.vs/
+./platform/Windows/*.db
+./platform/Windows/*.opendb
+./platform/Windows/*.con
+./platform/Windows/*.sym
+./platform/Windows/*.memmap
+./platform/Windows/*.manifest
+./platform/Windows/*.map
+./platform/Windows/*.pdb
+./platform/Windows/*.sdf
+./platform/Windows/*.suo
+./platform/Windows/*.opensdf
+./platform/Windows/*.vcxproj.user
+./platform/Windows/*.psess
+./platform/Windows/*.vsp
+
+xcuserdata/
+project.xcworkspace/
+*.dSYM/
+
 .DS_Store
-/polymer/eduke32/*.cache
-/polymer/eduke32/*.cfg
