I hoped ./ prefixes would work in a ignore on Windows.
git-svn-id: http://svn.eduke32.com/eduke32@6057 1a8010ca-5511-0410-912e-c29ae57300e0

--- a/.gitignore
+++ b/.gitignore
@@ -1,52 +1,46 @@
 
-./obj/
+obj/
 
-./eduke32
-./mapster32
-./voidsw
-./voidsw-editor
-./kenbuild
-./kenbuild-editor
-./apps/
-./*.exe
-./*.dll
-./*.dylib
-./*.so
-./*.elf
-./*.dol
-./*.x86
-./*.x64
-./*.ppc
-./*.app
+eduke32
+mapster32
+voidsw
+voidsw-editor
+kenbuild
+kenbuild-editor
+apps/
+*.exe
+*.dll
+*.dylib
+*.so
+*.elf
+*.dol
+*.x86
+*.x64
+*.ppc
+*.app
 
-./*.log
-./*.cache
-./*.cfg
-./textures
+*.log
+*.cache
+*.cfg
+textures
 
-./platform/Windows/*.exe
-./platform/Windows/*.log
-./platform/Windows/*.cache
-./platform/Windows/*.cfg
-./platform/Windows/textures
-
-./platform/Windows/*.cache
-./platform/Windows/*.cfg
-./platform/Windows/.vs/
-./platform/Windows/*.db
-./platform/Windows/*.opendb
-./platform/Windows/*.con
-./platform/Windows/*.sym
-./platform/Windows/*.memmap
-./platform/Windows/*.manifest
-./platform/Windows/*.map
-./platform/Windows/*.pdb
-./platform/Windows/*.sdf
-./platform/Windows/*.suo
-./platform/Windows/*.opensdf
-./platform/Windows/*.vcxproj.user
-./platform/Windows/*.psess
-./platform/Windows/*.vsp
+platform/Windows/*.cache
+platform/Windows/*.cfg
+platform/Windows/.vs/
+platform/Windows/*.db
+platform/Windows/*.opendb
+platform/Windows/*.con
+platform/Windows/*.sym
+platform/Windows/*.memmap
+platform/Windows/*.manifest
+platform/Windows/*.map
+platform/Windows/*.pdb
+platform/Windows/*.sdf
+platform/Windows/*.suo
+platform/Windows/*.opensdf
+platform/Windows/*.vcxproj.user
+platform/Windows/*.psess
+platform/Windows/*.vsp
 
 xcuserdata/
 project.xcworkspace/
