Some tweaks to the cleanup.
git-svn-id: http://svn.eduke32.com/eduke32@6058 1a8010ca-5511-0410-912e-c29ae57300e0

--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@ kenbuild
 kenbuild-editor
 apps/
 *.exe
-*.dll
+/*.dll
 *.dylib
 *.so
 *.elf
@@ -24,23 +24,23 @@ apps/
 *.cfg
 textures
 
-platform/Windows/*.cache
-platform/Windows/*.cfg
-platform/Windows/.vs/
-platform/Windows/*.db
-platform/Windows/*.opendb
-platform/Windows/*.con
-platform/Windows/*.sym
-platform/Windows/*.memmap
-platform/Windows/*.manifest
-platform/Windows/*.map
-platform/Windows/*.pdb
-platform/Windows/*.sdf
-platform/Windows/*.suo
-platform/Windows/*.opensdf
-platform/Windows/*.vcxproj.user
-platform/Windows/*.psess
-platform/Windows/*.vsp
+*.manifest
+/*.map
+/platform/Windows/*.map
+*.pdb
+.vs/
+*.VC.db
+*.VC.opendb
+*.sym
+/*.con
+/platform/Windows/*.con
+*.memmap
+*.sdf
+*.suo
+*.opensdf
+*.vcxproj.user
+*.psess
+*.vsp
 
 xcuserdata/
 project.xcworkspace/
