Route inclusion of all Windows headers through a new header, windows_inc.h.
This allows us to make certain guarantees about limits on the extent of namespace pollution these headers introduce.

git-svn-id: http://svn.eduke32.com/eduke32@6065 1a8010ca-5511-0410-912e-c29ae57300e0

--- a/source/duke3d/rsrc/gameres.rc
+++ b/source/duke3d/rsrc/gameres.rc
@@ -1,5 +1,5 @@
-#include <windows.h>
-#include <commctrl.h>
+#define NEED_COMMCTRL_H
+#include "windows_inc.h"
 #include "startwin.game.h"
 
 RSRC_ICON ICON "game_icon.ico"
