--- a/source/kenbuild/rsrc/buildres.rc
+++ b/source/kenbuild/rsrc/buildres.rc
@@ -1,5 +1,5 @@
-#include <windows.h>
-#include <commctrl.h>
+#define NEED_COMMCTRL_H
+#include "windows_inc.h"
 #include "startwin.editor.h"
 
 RSRC_ICON ICON "build_icon.ico"
