OSD (console) cleanup
git-svn-id: http://svn.eduke32.com/eduke32@6297 1a8010ca-5511-0410-912e-c29ae57300e0

--- a/platform/Windows/eduke32.vcxproj
+++ b/platform/Windows/eduke32.vcxproj
@@ -144,6 +144,7 @@
     <ClInclude Include="..\..\source\build\include\lz4.h" />
     <ClInclude Include="..\..\source\build\include\rawinput.h" />
     <ClInclude Include="..\..\source\build\include\renderlayer.h" />
+    <ClInclude Include="..\..\source\build\include\scancodes.h" />
     <ClInclude Include="..\..\source\build\include\scriptfile.h" />
     <ClInclude Include="..\..\source\build\include\sdlayer.h" />
     <ClInclude Include="..\..\source\build\include\sdl_inc.h" />
