--- a/platform/Windows/eduke32.vcxproj.filters
+++ b/platform/Windows/eduke32.vcxproj.filters
@@ -543,6 +543,12 @@
     <ClInclude Include="..\..\source\build\include\scancodes.h">
       <Filter>build\headers</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\source\build\include\pngwrite.h">
+      <Filter>build\headers</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\source\build\include\miniz.h">
+      <Filter>build\headers</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\source\build\src\a-c.cpp">
@@ -951,6 +957,12 @@
       <Filter>build\source</Filter>
     </ClCompile>
     <ClCompile Include="..\..\source\build\src\tiles.cpp">
+      <Filter>build\source</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\source\build\src\pngwrite.cpp">
+      <Filter>build\source</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\source\build\src\miniz.c">
       <Filter>build\source</Filter>
     </ClCompile>
   </ItemGroup>
