Use Q16.16 fixed point for player horiz
git-svn-id: http://svn.eduke32.com/eduke32@6724 1a8010ca-5511-0410-912e-c29ae57300e0

--- a/platform/Windows/eduke32.vcxproj
+++ b/platform/Windows/eduke32.vcxproj
@@ -103,6 +103,8 @@
     <ClInclude Include="..\..\source\build\include\dxtfilter.h" />
     <ClInclude Include="..\..\source\build\include\dynamicgtk.h" />
     <ClInclude Include="..\..\source\build\include\editor.h" />
+    <ClInclude Include="..\..\source\build\include\fix16.h" />
+    <ClInclude Include="..\..\source\build\include\fix16.hpp" />
     <ClInclude Include="..\..\source\build\include\glbuild.h" />
     <ClInclude Include="..\..\source\build\include\glext.h" />
     <ClInclude Include="..\..\source\build\include\gtkbits.h" />
@@ -263,6 +265,8 @@
     <ClCompile Include="..\..\source\build\src\dxtfilter.cpp" />
     <ClCompile Include="..\..\source\build\src\dynamicgtk.cpp" />
     <ClCompile Include="..\..\source\build\src\engine.cpp" />
+    <ClCompile Include="..\..\source\build\src\fix16.c" />
+    <ClCompile Include="..\..\source\build\src\fix16_str.c" />
     <ClCompile Include="..\..\source\build\src\glbuild.cpp" />
     <ClCompile Include="..\..\source\build\src\gtkbits.cpp" />
     <ClCompile Include="..\..\source\build\src\hash.cpp" />
