--- a/platform/Windows/eduke32.vcxproj.filters
+++ b/platform/Windows/eduke32.vcxproj.filters
@@ -567,6 +567,12 @@
     <ClInclude Include="..\..\source\glad\include\glad\glad_wgl.h">
       <Filter>glad\headers\glad</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\source\build\include\fix16.h">
+      <Filter>build\headers</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\source\build\include\fix16.hpp">
+      <Filter>build\headers</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\source\build\src\a-c.cpp">
@@ -988,6 +994,12 @@
     </ClCompile>
     <ClCompile Include="..\..\source\glad\src\glad_wgl.c">
       <Filter>glad\source</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\source\build\src\fix16.c">
+      <Filter>build\source</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\source\build\src\fix16_str.c">
+      <Filter>build\source</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
