Add missing file to VS project
git-svn-id: http://svn.eduke32.com/eduke32@6838 1a8010ca-5511-0410-912e-c29ae57300e0

--- a/platform/Windows/eduke32.vcxproj
+++ b/platform/Windows/eduke32.vcxproj
@@ -249,6 +249,7 @@
     <ClInclude Include="..\..\source\enet\include\enet\win32.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\source\audiolib\src\xmp.cpp" />
     <ClCompile Include="..\..\source\build\src\2d.cpp" />
     <ClCompile Include="..\..\source\build\src\a-c.cpp" />
     <ClCompile Include="..\..\source\build\src\animvpx.cpp" />
