--- a/platform/Windows/eduke32.vcxproj
+++ b/platform/Windows/eduke32.vcxproj
@@ -105,6 +105,7 @@
     <ClInclude Include="..\..\source\build\include\editor.h" />
     <ClInclude Include="..\..\source\build\include\fix16.h" />
     <ClInclude Include="..\..\source\build\include\fix16.hpp" />
+    <ClInclude Include="..\..\source\build\include\fix16_int64.h" />
     <ClInclude Include="..\..\source\build\include\glbuild.h" />
     <ClInclude Include="..\..\source\build\include\gtkbits.h" />
     <ClInclude Include="..\..\source\build\include\hash.h" />
