--- a/platform/Windows/eduke32.vcxproj.filters
+++ b/platform/Windows/eduke32.vcxproj.filters
@@ -570,6 +570,9 @@
     <ClInclude Include="..\..\source\build\include\fix16.hpp">
       <Filter>build\headers</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\source\build\include\fix16_int64.h">
+      <Filter>build\headers</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\source\build\src\a-c.cpp">
